@@ -21,6 +21,7 @@
   "homepage": "https://gitlab.com/devheroes/builderien#README",
   "dependencies": {
     "create-react-class": "^15.6.3",
+    "process": "^0.11.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
