@@ -9,13 +9,13 @@
                 [binaryage/devtools         "0.9.10"]
                 [re-frisk                   "0.5.4"]
                 [day8.re-frame/re-frame-10x "0.3.3"]
-                [cider/cider-nrepl          "0.21.1"]
                 [com.andrewmcveigh/cljs-time "0.5.2"]
                 [garden                     "1.3.9"]
                 [metosin/reitit             "0.3.7"]]
 
 
  :dev-http {8000 "./resources/public"}
+
  :builds {:app {:target :browser
                 :output-dir "resources/public/js/compiled/out"
                 :asset-path "/js/compiled/out"
