@@ -1,8 +1,24 @@
+;; Builderien - Static website generator
+;; Copyright (C) 2018-2019  Factorien Team
+
+;; This program is free software; you can redistribute it and/or
+;; modify it under the terms of the GNU General Public License
+;; as published by the Free Software Foundation; either version 2
+;; of the License, or any later version.
+
+;; This program is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+
+;; You should have received a copy of the GNU General Public License
+;; along with this program.
+
 (ns builderien.config
   (:require-macros [builderien.website :refer [get-config]]))
 
 (def debug?
-  ^boolean (get-config :debug))
+  ^boolean (or (get-config :debug) false))
 
 (goog-define version "0.1.0")
 
