@@ -1,64 +1,43 @@
+;; Builderien - Static website generator
+;; Copyright (C) 2018-2019  Factorien Team
+
+;; This program is free software; you can redistribute it and/or
+;; modify it under the terms of the GNU General Public License
+;; as published by the Free Software Foundation; either version 2
+;; of the License, or any later version.
+
+;; This program is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+
+;; You should have received a copy of the GNU General Public License
+;; along with this program.
+
 (ns builderien.views
   (:require
-   [re-frame.core        :as re-frame]
-   [builderien.views.home    :as home]
-   [builderien.views.footer  :as footer]
+   [re-frame.core            :as re-frame]
    [builderien.i18n          :refer [t]]
    [builderien.views.nav     :as nav]
+   ;; We generate this namespace to only include those UI namespaces
+   ;; which is used in the configuration file (build configuration edn file)
    [builderien.views.bindings])
+
   (:require-macros
    [builderien.website :refer [get-config]]
    [builderien.pages :refer [define-pages]]))
 
-;; (defn- panels [panel-name]
-;;   (for-current-website panel-name
-;;                        :about [:h1 "about"]
-;;                        [:div]))
 
-
-(defn- pages [panel]
-  (case panel
-    :builderien.pages/index (get-config :home-fn)
-    [:div [:h1 "404"]]))
-
-(defn render-page
-  [page]
-  [pages page])
-
-
-(defn hero
-  []
-  [:section {:className "hero is-medium is-light"}
-   [:div {:className :hero-body}
-    [:div {:className "container"}
-     [:div {:className "columns"}
-      [:div {:className "column is-half"}
-       [:div {:className "has-text-right"}
-        [:h2 {:className :title}
-         (get-config :welcome-title)]
-        [:p {:className :subtitle1}
-         (get-config :welcome-message)]]]
-
-      [:div {:className "column is-half has-text-centered"}
-       [:img {:className :logo :src (get-config :logo)}]]]]]])
-
-(println (macroexpand-1
-          '(define-pages)))
-
+;; This is a macro defined in `builderien.pages` ns in clojure side
+;; that parses the build configuration and creates a set root components
+;; for each page in the build configuration in the following format:
+;; `PAGENAME-page-component`. In each root component it defines a tree
+;; of UI components based on the build configuration.
 (define-pages)
 
-(defn main-panel
+
+(defn main
   []
-  [index-page-component])
-
-
-
-(defn main-panel1 []
   (let [active-page (re-frame/subscribe [:active-page])]
-    (fn []
-      [:div
-       [nav/bar]
-       [hero]
-       [:div {:className "container"}
-        [render-page @active-page]]
-       [footer/bar]])))
+    (println "asdasd" @active-page)
+    [:h1 @active-page]))
